fixes and spacing testing

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -33,6 +33,9 @@ a.navbar {
 a.navbar:hover {
   background-color: #ddd;
 }
+p.listing {
+  margin: 0 0 5px;
+}
 main {
   margin: 20px;
 }
